themes/casBlog/assets/scss/base/block/_card.scss
.post-feed {
    display: flex;
    flex-wrap: wrap;
    margin-left: -1rem;
    margin-right: -1rem;
}
.card-post {
    background: $white;
    margin: 2rem 1rem;
    align-items: center;
    border: $global-border;
    .post-title {
        margin-bottom: 0;
        font-size: rem-calc(24);
        a {
            color: $dark-gray;
            border: 0;
            &:hover {
                color: get-color('cyan');
            }
        }
    }
    .excerpt {
        margin-bottom: 1rem;
        &:after {
            content: "...";
        }
    }
    .author {
        text-transform: uppercase;
        font-weight: 700;
        font-size: rem-calc(14);
        display: inline-block;
        padding: rem-calc(0 5);
        margin: 0 -5px 1rem;
        border-radius: $global-radius;
        color: $ui-gray;
    }
    .img-wrapper {
        display: flex;
        min-height: rem-calc(220);
        max-height: rem-calc(220);
        justify-content: center;
        align-items: center;
        overflow: hidden;
        text-align: center;
        background-color: $off-white;
    }
    .detail-wrapper {
        padding: 1rem 2rem;
    }
    .post-detail {
        font-size: rem-calc(14);
        color: $medium-gray;
        margin: rem-calc(17 0 2);
    }
    .read-more {
        text-transform: uppercase;
        font-size: rem-calc(15);
    }
    &.action {
        display: flex;
        justify-content: center;
        align-items: center;
        border: 0;
        background: transparent;
        .nav {
            font-size: rem-calc(20);
            font-style: italic;
        }
    }
}

@media screen and #{breakpoint(medium)} {
    .card-post {
        flex: 0 0 calc(100%/2 - 2rem);
    }
}

@media screen and #{breakpoint(large)} {
    .card-post {
        flex: 0 0 calc(100%/3 - 2rem);
        .img-wrapper {
            align-items: flex-start;
            max-height: initial;
            min-height: initial;
        }
    }
}

